--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -7,9 +7,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v2
+
       - name: Checkout (copy) gh-pages repository to GitHub runner
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
         with:
           ref: gh-pages
           path: ./.github/gh-pages
@@ -19,23 +20,23 @@ jobs:
           LOGIN: ${{ secrets.LOGIN }}
           PASSWORD: ${{ secrets.PASSWORD }}
         run: |
-          docker compose up --exit-code-from regression || true                                                                                  
+          docker-compose up --exit-code-from regression || true
 
-     # - name: Copy history from gh-pages to allure-results
-     #   run: |
-     #     sudo mkdir -p allure-results/history  # Создает директорию для истории Allure
-     #     sudo cp -R ./.github/gh-pages/history/* allure-results/history/
+      - name: Copy history from gh-pages to allure-results
+        run: |
+          sudo mkdir -p allure-results/history  # Создает директорию для истории Allure
+          sudo cp -R ./.github/gh-pages/history/* allure-results/history/
 
       - name: Generate Allure report
         run: |
-          sudo docker compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"
+          sudo docker-compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"
 
-     # - name: Update Allure history
-     #   run: |
-     #     sudo cp -R allure-report/history/* ./.github/gh-pages/history/
+      - name: Update Allure history
+        run: |
+          sudo cp -R allure-report/history/* ./.github/gh-pages/history/
 
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
+        uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
           token: ${{ secrets.CI_TOKEN }}
           branch: gh-pages
