--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -24,16 +24,16 @@ jobs:
 
       - name: Copy history from gh-pages to allure-results
         run: |
-          sudo mkdir -p allure-results/history  # Создает директорию для истории Allure
-          #sudo cp -R ./.github/gh-pages/history/* allure-results/history/
+          mkdir -p allure-results/history  # Создает директорию для истории Allure
+          cp -R ./.github/gh-pages/history/* allure-results/history/
 
       - name: Generate Allure report
         run: |
           docker-compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"
 
-     # - name: Update Allure history
-        #run: |
-          #sudo cp -R allure-report/history/* ./.github/gh-pages/history/
+      - name: Update Allure history
+        run: |
+          cp -R allure-report/history/* ./.github/gh-pages/history/
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
