--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -20,20 +20,20 @@ jobs:
           LOGIN: ${{ secrets.LOGIN }}
           PASSWORD: ${{ secrets.PASSWORD }}
         run: |
-          docker-compose up --exit-code-from regression || true
+          docker compose up --exit-code-from regression || true
 
       - name: Copy history from gh-pages to allure-results
         run: |
           mkdir -p allure-results/history  # Создает директорию для истории Allure
-          #cp -R ./.github/gh-pages/history/* allure-results/history/
+          cp -R ./.github/gh-pages/history/* allure-results/history/
 
       - name: Generate Allure report
         run: |
           docker compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"
 
-      #- name: Update Allure history
-     #   run: |
-        #  cp -R allure-report/history/* ./.github/gh-pages/history/
+      - name: Update Allure history
+        run: |
+          cp -R allure-report/history/* ./.github/gh-pages/history/
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
