--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   regression:
-    image: python:3.12.0a4-alpine3.17
+    image: python:3.14.0a5-slim
     build:
       context: .
       dockerfile: Dockerfile
