--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -20,11 +20,11 @@ jobs:
           LOGIN: ${{ secrets.LOGIN }}
           PASSWORD: ${{ secrets.PASSWORD }}
         run: |
-          docker-compose up --exit-code-from regression || true
+          docker compose up --exit-code-from regression || true
 
       - name: Generate Allure report
         run: |
-          docker-compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"
+          docker compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
