--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
-          token: ${{ secrets.CI_TOKEN }}
+          token: ${{ secrets.AUTOOHRM__TOKEN }}
           branch: gh-pages
           folder: allure-report
           clean: true
