--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -1,4 +1,4 @@
-name: UI Tests
+ame: UI Tests
 
 on: workflow_dispatch
 
@@ -8,7 +8,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
       - name: Checkout (copy) gh-pages repository to GitHub runner
         uses: actions/checkout@v4
         with:
@@ -20,16 +19,25 @@ jobs:
           LOGIN: ${{ secrets.LOGIN }}
           PASSWORD: ${{ secrets.PASSWORD }}
         run: |
-          docker-compose up --exit-code-from regression || true
+          docker-compose up --exit-code-from regression || true                                                                                  
+
+      - name: Copy history from gh-pages to allure-results
+        run: |
+          sudo mkdir -p allure-results/history  # Создает директорию для истории Allure
+          sudo cp -R ./.github/gh-pages/history/* allure-results/history/
 
       - name: Generate Allure report
         run: |
-          sudo docker-compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"
+          docker compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"
+
+      - name: Update Allure history
+        run: |
+          sudo cp -R allure-report/history/* ./.github/gh-pages/history/
 
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@4.1.5
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          token: ${{ secrets.CI_TOKEN }}
+          token: ${{ secrets.AUTOOHRM__TOKEN }}
           branch: gh-pages
           folder: allure-report
           clean: true
