--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   regression:
-    image: userdocker1011/autoqa_python:latest
+    #image: userdocker1011/autoqa_python:latest
     build:
       context: .
       dockerfile: Dockerfile
